fixed broken UI

--- a/src/main/webapp/styles/standart.css
+++ b/src/main/webapp/styles/standart.css
@@ -432,5 +432,12 @@ span {
     background-position: 10px center;
     text-align: center;
     padding-top: 10px;
+}
 
+#login{
+    width: 220px;
+}
+
+#inputLogin{
+    width: 150px;
 }
